# eval-learn

./: .gitattributes  .gitignore  .readthedocs.yaml  CLAUDE.md  DEVELOPER_GUIDE.md  GEMINI.md  README.MD  README.md  USER_GUIDE.md  asr_benchmark.py  benchmark.py  clipscore_benchmark.py  demo.ipynb  developer_guide_old.md  err_benchmark.py  err_benchmark_runner.py  nudity_unlearning_demo.ipynb  nudity_unlearning_demo.py  nudity_unlearning_demo_violence.py  pyproject.toml  readme.md  refactored.md  requirements.txt  run_benchmarks.py  run_demo.py  run_demo.sh  run_demo_steerers.py  run_scenario.md  sld_benchmark.py  test_pipeline.py  tifa_benchmark.py  violence_unlearning_demo.py
.github/workflows/: test.yml
config/: hf_datasets.yaml
core/: base_benchmark.py  base_technique.py  benchmark_orchestrator.py
data/: i2p_benchmark_sample.csv
data/ERR/raw_csv_data/: challenge_dataset.csv
data/coco/: coco_3k_sample.parquet
data/i2p/: README.md  i2p_benchmark_sample.csv
data/ring_a_bell/: ring_a_bell_dataset.csv
data/tifa/: sensitive_question_answers.json  sensitive_text_inputs.json
demos/notebooks/: nudity_unlearning_demo.ipynb  violence_unlearning_demo.ipynb
demos/standalone_scripts/: demo_nudity.sh  demo_violence.sh  nudity_unlearning_demo.py
docs/: COMPATIBILITY_MATRIX.md  PACKAGE_INTEGRATION_GUIDE.md  mkdocs.yml  requirements.txt
docs/docs/: cli.md  concepts.md  getting-started.md  index.md
docs/docs/metrics/: asr-custom.md  asr-ring-a-bell.md  asr.md  asr_i2p.md  asr_mma-diffusion.md  asr_p4d.md  clip-score.md  err.md  fid.md  index.md  mma-diffusion.md  tifa.md  ua-ira.md
docs/docs/running-experiments/: caching-adversarial-prompts.md  cluster.md  compatibility.md  gpu-requirements.md  multi-runner.md  single-runner.md
docs/docs/techniques/: advunlearn.md  ca.md  cogfd.md  concept-steerers.md  esd.md  free-run.md  index.md  mace.md  rece.md  saeuron.md  safree.md  salun.md  sld.md  ssd.md  trasce.md  uce.md
evaluation_metrics/: err.py
evaluation_metrics/ERR/: err.py  err_task.py  eval_err.py  generate_err.py
evaluation_metrics/asr_metric/: asr.py
evaluation_metrics/distance_metrics/: evaluate_sld.py  fid.py
evaluation_metrics/text_to_image_fidelity/: tifa_task.py  vqa_model.py
evaluation_metrics/text_to_image_fidelity/TIFA/: requirements.txt  run_eval.py  run_generate.py  run_vqa.py
evaluation_metrics/text_to_image_fidelity/clipscore/: clip.py  data_generation.py  image_generation.py
examples/: matrix_config.json  multi_config.json  single_config.json  smoke_config.json
examples/data/: nudity_retain_prompts.csv  violence_retain_prompts.csv  violence_target_prompts.csv
examples/demo/: quickstart_nudity.json  quickstart_violence.json
examples/demo configs/: advunlearn_nudity_multi.json  cogfd_nudity_multi.json  concept_steerers_nudity_multi.json  esd_nudity_multi.json  mace_nudity_multi.json  saeuron_nudity_multi.json  safree_nudity_multi.json  sld_nudity_multi.json  uce_nudity_multi.json
examples/demo_configs/: advunlearn_nudity_multi.json  advunlearn_violence_multi.json  ca_nudity_multi.json  ca_violence_multi.json  cogfd_nudity_multi.json  cogfd_violence_multi.json  concept_steerers_nudity_multi.json  concept_steerers_violence_multi.json  esd_nudity_multi.json  esd_violence_multi.json  free_run_nudity_multi.json  free_run_test.json  free_run_violence_multi.json  mace_nudity_multi.json  mace_violence_multi.json  saeuron_nudity_multi.json  saeuron_violence_multi.json  safree_nudity_multi.json  safree_violence_multi.json  sld_nudity_multi.json  sld_violence_multi.json  ssd_nudity_multi.json  ssd_violence_multi.json  trasce_nudity_multi.json  trasce_violence_multi.json  uce_nudity_multi.json  uce_violence_multi.json
examples/demo_configs/data/: nudity_target_prompts.csv  unsafe-prompts4703.csv
examples/nudity/: advunlearn.json  ca.json  cogfd.json  concept_steerers.json  esd.json  free_run.json  mace.json  rece.json  saeuron.json  safree.json  salun.json  sld.json  ssd.json  trasce.json  uce.json
examples/violence/: advunlearn.json  ca.json  cogfd.json  concept_steerers.json  esd.json  free_run.json  mace.json  rece.json  saeuron.json  safree.json  salun.json  sld.json  ssd.json  trasce.json  uce.json
legacy/: clipscore_benchmark.py  err_benchmark.py  fid_benchmark.py  old_demo.ipynb
legacy/evaluation_metrics/ERR/: err.py  err_task.py
legacy/evaluation_metrics/asr_metric/: asr_task.py
legacy/evaluation_metrics/fid_metric/: fid_task.py
legacy/unlearning_techniques/: SLD.py
legacy/unlearning_techniques/sld_pipeline/: sld_wrapper.py
legacy_docs/: CLAUDE.md  DEVELOPER_GUIDE.md  implement-test.md
results/benchmark_runs/: sld_asr_weak_i2p_sample_1769176525.json  sld_asr_weak_i2p_sample_1769176726.json  sld_asr_weak_i2p_sample_1769177173.json
results/benchmarks/ASR_Benchmark/: report_1769182395.json  report_1769185725.json
results/clipscore/: clipscore_results.json
results/sld_asr_test1234/: test1234_report.json
src/eval_learn/: cli.py  hub.py  logging_utils.py  types.py
src/eval_learn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/eval_learn/artifacts/: __init__.py  (+1 more)
tests/: conftest.py  test_benchmark_runner.py  test_configs.py  test_datasets.py  test_hf_sync.py  test_integration_sld_i2p.py  test_metric_asr.py  test_metric_err.py  test_metric_fid.py  test_metric_tifa.py  test_registry.py  test_smoke.py  test_smoke_asr_sld.py  test_types.py
tests/integration/: test_pipeline.py
tests/unit/: __init__.py  test_artifact_writer.py  test_benchmark_runner.py  test_cli.py  test_configs.py  test_datasets_types.py  test_hf_datasets.py  test_hf_sync.py  test_hub.py  test_matrix_benchmark_runner.py  test_metric_clip_score.py  test_multi_benchmark_runner.py  test_runner_validation.py
unlearning_techniques/: SFD_pipeline.py  sld_pipeline.py
unlearning_techniques/sld_pipeline/: sld_pipeline.py  sld_wrapper.py
unlearning_techniques/white_box/: SLD.py
utility_scripts/: compute_benchmark.py  plot_asr.py  plot_clip_score.py  plot_err.py  plot_fid.py  plot_tifa.py  plot_ua_ira.py
(+146 files in other folders)
