[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-learn"
version = "0.1.0"
description = "Unlearning Benchmark for Text-to-Image Models"
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Eval-Learn Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "tqdm",
    "requests",
    "filelock",
    "fsspec",
    "torchmetrics",
    "safetensors",
    "diffusers",
    "huggingface_hub",
    "pandas",
    "Pillow",
    "python-dotenv",
    "torch",
    "transformers",
    "datasets",
    "pyyaml",
]

[project.optional-dependencies]
# Metric extras (PyPI packages)
asr = ["nudenet"]
fid = ["torchvision"]
tifa = ["tensorflow"]
coco = ["pycocotools"]
# Development
dev = ["pytest", "ruff", "mypy"]

# Note: Technique packages (esd, mace, uce, safree, sld, saeuron, ccrt)
# are git dependencies declared in requirements.txt only

[project.scripts]
eval-learn = "eval_learn.cli:main"

# Entry points for plugin discovery
[project.entry-points."eval_learn.techniques"]
free_run = "eval_learn.techniques.free_run.wrapper:FreeRunTechnique"
esd = "eval_learn.techniques.esd.wrapper:ESDWrapper"
mace = "eval_learn.techniques.mace.wrapper:MACEWrapper"
sld = "eval_learn.techniques.sld.wrapper:SLDWrapper"
uce = "eval_learn.techniques.uce.wrapper:UCEWrapper"
safree = "eval_learn.techniques.SAFREE.wrapper:SAFREETechnique"
concept_steerers = "eval_learn.techniques.concept_steerers.wrapper:ConceptSteerersWrapper"
saeuron = "eval_learn.techniques.saeuron.wrapper:SAeUronWrapper"

[project.entry-points."eval_learn.metrics"]
asr = "eval_learn.metrics.asr.metric:ASRMetric"
fid = "eval_learn.metrics.fid.metric:FIDMetric"
err = "eval_learn.metrics.err.metric:ERRMetric"
tifa = "eval_learn.metrics.tifa.metric:TIFAMetric"
clip_score = "eval_learn.metrics.clip_score.metric:CLIPScoreMetric"
ccrt = "eval_learn.metrics.ccrt.metric:CCRTMetric"
ua_ira = "eval_learn.metrics.ua_ira.metric:UAIRAMetric"

[project.entry-points."eval_learn.datasets"]
i2p_csv = "eval_learn.datasets.i2p_csv:load_i2p_csv"
err_composite = "eval_learn.datasets.err_composite:load_err_composite"
tifa_json = "eval_learn.datasets.tifa_json:load_tifa_json"
coco_parquet = "eval_learn.datasets.coco_parquet:load_coco_parquet"
ccrt_genetic = "eval_learn.datasets.ccrt_genetic:load_ccrt_genetic"
ua_ira_hf = "eval_learn.datasets.ua_ira_hf:load_ua_ira_hf"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require GPU and real models (deselect with '-m \"not integration\"')",
]
