[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-learn"
version = "0.1.0"
description = "Unlearning Benchmark for Text-to-Image Models"
readme = "readme.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Eval-Learn Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.4.0",
    "scipy>=1.17.0",
    "tqdm>=4.66.5",
    "requests>=2.28.1",
    "filelock>=3.25.0",
    "fsspec>=2026.2.0",
    "torchmetrics>=1.0.3",
    "safetensors>=0.7.0",
    "diffusers>=0.37.0",
    "huggingface_hub>=1.8.0",
    "pandas>=3.0.1",
    "Pillow>=12.1.0",
    "python-dotenv>=1.2.2",
    "torch>=2.11.0",
    "transformers>=5.3.0",
    "datasets>=4.8.0",
    "pyarrow>=22.0.0,<23.0.0",
    "pyyaml>=5.1",
]

[project.optional-dependencies]
# Metric extras (PyPI packages)
asr = ["nudenet>=3.4.2"]
fid = ["torchvision>=0.26.0"]
tifa = ["tensorflow>=2.21.0"]
coco = ["pycocotools>=2.0.11"]
# Development
dev = ["pytest>=7.0.0", "ruff>=0.0.1", "mypy>=1.0.0"]

# Note: Technique packages (esd, mace, uce, safree, sld, saeuron)
# are local editable installs declared in requirements.txt

[project.scripts]
eval-learn = "eval_learn.cli:main"

# Entry points for plugin discovery
[project.entry-points."eval_learn.techniques"]
free_run = "eval_learn.techniques.free_run.wrapper:FreeRunTechnique"
esd = "eval_learn.techniques.esd.wrapper:ESDWrapper"
mace = "eval_learn.techniques.mace.wrapper:MACEWrapper"
sld = "eval_learn.techniques.sld.wrapper:SLDWrapper"
uce = "eval_learn.techniques.uce.wrapper:UCEWrapper"
safree = "eval_learn.techniques.SAFREE.wrapper:SAFREETechnique"
concept_steerers = "eval_learn.techniques.concept_steerers.wrapper:ConceptSteerersWrapper"
saeuron = "eval_learn.techniques.saeuron.wrapper:SAeUronWrapper"
advunlearn = "eval_learn.techniques.advunlearn.wrapper:AdvUnlearnWrapper"

[project.entry-points."eval_learn.metrics"]
asr = "eval_learn.metrics.asr.metric:ASRMetric"
asr_custom = "eval_learn.metrics.asr_custom.metric:ASRCustomMetric"
mma_diffusion = "eval_learn.metrics.mma_diffusion.metric:MMADiffusionMetric"
fid = "eval_learn.metrics.fid.metric:FIDMetric"
err = "eval_learn.metrics.err.metric:ERRMetric"
tifa = "eval_learn.metrics.tifa.metric:TIFAMetric"
clip_score = "eval_learn.metrics.clip_score.metric:CLIPScoreMetric"
ua_ira = "eval_learn.metrics.ua_ira.metric:UAIRAMetric"

[project.entry-points."eval_learn.datasets"]
i2p_csv = "eval_learn.datasets.i2p_csv:load_i2p_csv"
err_composite = "eval_learn.datasets.err_composite:load_err_composite"
tifa_csv = "eval_learn.datasets.tifa_csv:load_tifa_csv"
coco_parquet = "eval_learn.datasets.coco_parquet:load_coco_parquet"
ua_ira_csv = "eval_learn.datasets.ua_ira_csv:load_ua_ira_csv"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require GPU and real models (deselect with '-m \"not integration\"')",
]
